--- a/src/components/ContactModal/ContactModal.module.css
+++ b/src/components/ContactModal/ContactModal.module.css
@@ -9,7 +9,7 @@
 }
 
 .inner-modal {
-  background-color: var(--white-primary);
+  background-color: var(--white-color);
   position: fixed;
   z-index: 104;
   top: 50%;
@@ -40,10 +40,10 @@
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid #000;
+  border: 8px solid var(--black-color);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #000 transparent transparent transparent;
+  border-color: var(--black-color) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
@@ -80,11 +80,11 @@
 
 .inner-modal button {
   background-color: transparent;
-  color: var(--purple-primary);
-  border: 2px solid var(--purple-primary);
+  color: var(--dark-purple-color);
+  border: 2px solid var(--dark-purple-color);
   align-self: center;
   height: 45px;
-  font-weight: 500;
+  font-weight: var(--font-weight-500);
 }
 
 .inner-modal button:hover {
@@ -92,9 +92,9 @@
 }
 
 .inner-modal p {
-  font-weight: 500;
+  font-weight: var(--font-weight-500);
   line-height: 20px;
-  font-size: 1rem;
+  font-size: var(--font-size-8);
   margin: 1rem 0;
   text-align: center;
 }
