--- a/src/components/CheckFlightStatusModal/CheckFlightStatusModal.module.css
+++ b/src/components/CheckFlightStatusModal/CheckFlightStatusModal.module.css
@@ -9,7 +9,7 @@
 }
 
 .inner-modal {
-  background-color: var(--white-primary);
+  background-color: var(--white-color);
   position: fixed;
   z-index: 104;
   top: 50%;
@@ -44,8 +44,8 @@
 }
 
 .inner-modal h5 {
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: var(--font-size-8);
+  font-weight: var(--font-weight-500);
   text-align: center;
 }
 
@@ -71,11 +71,11 @@
 
 .inner-modal button {
   background-color: transparent;
-  color: var(--purple-primary);
-  border: 2px solid var(--purple-primary);
+  color: var(--dark-purple-color);
+  border: 2px solid var(--dark-purple-color);
   align-self: center;
   height: 45px;
-  font-weight: 500;
+  font-weight: var(--font-weight-500);
 }
 
 .inner-modal button:hover {
@@ -98,10 +98,10 @@
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid #000;
+  border: 8px solid var(--black-color);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #000 transparent transparent transparent;
+  border-color: var(--black-color) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
@@ -127,7 +127,7 @@
   }
 
   .non-existing-content h4 {
-    font-size: 1rem;
+    font-size: var(--font-size-8);
   }
 
   .non-existing-content img {
@@ -135,6 +135,10 @@
   }
 
   .inner-modal__content h5 {
-    font-size: 0.875rem;
+    font-size: var(--font-size-9);
+  }
+
+  .inner-modal button {
+    width: 100%;
   }
 }
