--- a/src/components/DiscoverDestinations/DiscoverDestinations.module.css
+++ b/src/components/DiscoverDestinations/DiscoverDestinations.module.css
@@ -9,11 +9,15 @@
   width: 1000px;
   margin: 0 auto;
 }
-.discover-content h2 {
+.discover-content h3 {
   padding-top: 80px;
   position: relative;
   z-index: 3;
   max-width: 50vw;
+}
+
+.all-destinations > h4 {
+  padding-top: 20px;
 }
 
 .discover-content p {
@@ -27,7 +31,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: var(--purple-secondary);
+  background-color: var(--dark-purple-color);
   width: 60vw;
   height: 60vw;
   border-radius: 50%;
@@ -49,7 +53,7 @@
 }
 
 .all-destinations ul li {
-  height: 50vh;
+  min-height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,10 +71,10 @@
   border-radius: 10px;
 }
 
-.all-destinations ul li h3 {
+.all-destinations ul li h4 {
   position: relative;
   z-index: 5;
-  color: var(--white-primary);
+  color: var(--white-color);
   text-align: center;
   padding-inline: 20px;
   pointer-events: none;
@@ -78,17 +82,13 @@
   border-radius: 5px;
 }
 
-.all-destinations ul li:hover h3 {
-  background-color: black;
+.all-destinations ul li:hover h4 {
+  background-color: var(--black-color);
 }
 
 .image-overlay {
   position: absolute;
-  background: linear-gradient(
-    359.5deg,
-    #110619 -2.53%,
-    rgba(17, 6, 25, 0) 187.57%
-  );
+  background: linear-gradient(359.5deg, var(--dark-purple-color) -2.53%, rgba(var(--dark-purple-rgb), 0) 187.57%);
   z-index: 4;
   width: 100%;
   height: 100%;
@@ -102,16 +102,15 @@
 
 @media (max-width: 768px) {
   .discover-content .circle {
-    width: 600px;
-    height: 600px;
+    display: none;
+  }
+
+  .all-destinations ul li {
+    min-height: 150px;
   }
 
   .discover-header p,
-  .discover-header h2 {
+  .discover-header h3 {
     max-width: 100%;
-  }
-
-  .all-destinations ul li h3 {
-    font-size: 1.875rem;
   }
 }
