--- a/src/components/FlightContent/FlightContent.module.css
+++ b/src/components/FlightContent/FlightContent.module.css
@@ -5,9 +5,9 @@
   margin: 0 auto;
 }
 
-.flight-content h2 {
-  color: var(--white-primary);
-  margin-bottom: 8px;
+.flight-content h4 {
+  color: var(--white-color);
+  margin-bottom: 16px;
   text-align: center;
 }
 
@@ -29,13 +29,13 @@
   border: none;
   outline: none;
   background-color: transparent;
-  font-weight: 500;
-  color: var(--white-primary);
+  font-weight: var(--font-weight-500);
+  color: var(--white-color);
   cursor: pointer;
 }
 
 .sorting-holder select:focus {
-  background-color: var(--purple-primary);
+  background-color: var(--dark-purple-color);
 }
 
 .flights-actions {
@@ -47,10 +47,10 @@
   border: none;
   outline: none;
   cursor: pointer;
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: var(--font-weight-500);
+  font-size: var(--font-size-8);
   background-color: transparent;
-  color: var(--white-primary);
+  color: var(--white-color);
   margin-top: 1rem;
   text-align: right;
   display: flex;
@@ -59,7 +59,7 @@
 }
 
 .flights-actions button span {
-  border-bottom: 2px solid var(--white-primary);
+  border-bottom: 2px solid var(--white-color);
 }
 
 .flights-actions button img {
@@ -84,10 +84,10 @@
   width: 62px;
   height: 62px;
   margin: 8px;
-  border: 8px solid var(--white-primary);
+  border: 8px solid var(--white-color);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: var(--white-primary) transparent transparent transparent;
+  border-color: var(--white-color) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
@@ -109,10 +109,6 @@
 
 @media (max-width: 500px) {
   .flights-actions button {
-    font-size: 0.875rem;
-  }
-
-  .flight-content h2 {
-    text-align: left;
+    font-size: var(--font-size-9);
   }
 }
