--- a/src/components/FlightDetail/FlightDetail.module.css
+++ b/src/components/FlightDetail/FlightDetail.module.css
@@ -13,10 +13,10 @@
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid var(--white-primary);
+  border: 8px solid var(--white-color);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: var(--white-primary) transparent transparent transparent;
+  border-color: var(--white-color) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
