--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -14,35 +14,35 @@ footer.footer-dark {
 }
 
 footer.footer-dark > p {
-  color: var(--white-primary);
+  color: var(--white-color);
 }
 
-footer.footer-dark h4 {
-  color: var(--white-primary);
+footer.footer-dark h6 {
+  color: var(--white-color);
 }
 
 footer.footer-dark > a {
-  background-color: var(--purple-secondary);
-  color: var(--white-primary);
+  background-color: var(--light-purple-color);
+  color: var(--white-color);
 }
 
 footer.footer-dark > a:hover {
-  background-color: var(--purple-primary);
-  color: var(--white-primary);
+  background-color: var(--dark-purple-color);
+  color: var(--white-color);
 }
 
 footer > p {
-  font-size: 0.875rem;
+  font-size: var(--font-size-9);
   max-width: 90vw;
   margin: 8px auto 0 auto;
 }
 
 footer > a {
   text-decoration: none;
-  font-size: 0.875rem;
+  font-size: var(--font-size-9);
   border-radius: 30px;
-  background-color: var(--purple-primary);
-  color: var(--white-primary);
+  background-color: var(--dark-purple-color);
+  color: var(--white-color);
   padding: 14px 58px;
   cursor: pointer;
   margin-top: 28px;
@@ -52,7 +52,7 @@ footer > a {
 }
 
 footer > a:hover {
-  background-color: var(--purple-secondary);
+  background-color: var(--light-purple-color);
 }
 
 .footer-social {
@@ -68,7 +68,7 @@ footer > a:hover {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: var(--white-primary);
+  background-color: var(--white-color);
   box-shadow: 0px 6px 12px rgba(24, 39, 75, 0.22);
   width: 24px;
   height: 24px;
@@ -108,14 +108,14 @@ footer > a:hover {
 }
 
 .copyright p {
-  color: var(--white-primary);
-  font-size: 1rem;
+  color: var(--white-color);
+  font-size: var(--font-size-9);
   font-weight: 300;
 }
 
 .copyright a {
   border-radius: 50%;
-  border: 1px solid var(--white-primary);
+  border: 1px solid var(--white-color);
   width: 32px;
   height: 32px;
   display: flex;
@@ -125,7 +125,7 @@ footer > a:hover {
 }
 
 .copyright a:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(var(--white-rgb), 0.1);
 }
 
 @media (max-width: 768px) {
