--- a/src/components/LandingContent/LandingContent.module.css
+++ b/src/components/LandingContent/LandingContent.module.css
@@ -1,9 +1,5 @@
 .landing-content {
-  background: linear-gradient(
-      99.55deg,
-      #110619 9.63%,
-      rgba(17, 6, 25, 0) 193.15%
-    ),
+  background: linear-gradient(99.55deg, #110619 9.63%, rgba(17, 6, 25, 0) 193.15%),
     url("/src/assets/background.jpg") no-repeat;
   background-position: 50% 20%;
   background-size: cover;
@@ -16,11 +12,10 @@
   margin: 0 auto;
 }
 
-.landing-content div h1 {
-  color: var(--white-primary);
+.landing-content div h3 {
+  color: var(--white-color);
   padding-top: 110px;
   max-width: 100%;
-  width: 600px;
 }
 
 @media (max-width: 768px) {
