--- a/src/components/NotFound/NotFound.module.css
+++ b/src/components/NotFound/NotFound.module.css
@@ -6,9 +6,9 @@
 }
 
 .not-found h1 {
-  color: var(--white-primary);
-  font-weight: 700;
-  font-size: 5rem;
+  color: var(--white-color);
+  /* font-weight: var(--font-weight-700);
+  font-size: 5rem; */
 }
 
 .not-found h2 {
@@ -20,10 +20,10 @@
   border: none;
   outline: none;
   cursor: pointer;
-  font-weight: 500;
-  font-size: 16px;
-  background-color: var(--purple-secondary);
-  color: var(--white-primary);
+  font-weight: var(--font-weight-500);
+  font-size: var(--font-size-8);
+  background-color: var(--light-purple-color);
+  color: var(--white-color);
   padding: 0.75rem 1.5rem;
   border-radius: 10px;
   margin-top: 1rem;
@@ -31,5 +31,5 @@
 }
 
 .not-found button:hover {
-  background-color: var(--purple-primary);
+  background-color: var(--dark-purple-color);
 }
