--- a/src/components/OurStory/OurStory.module.css
+++ b/src/components/OurStory/OurStory.module.css
@@ -10,14 +10,11 @@
   max-width: 90vw;
   width: 1000px;
   margin: 0 auto;
-  gap: 2rem;
+  color: var(--white-color);
+  flex-direction: column;
 }
 
-.left-side {
-  color: var(--white-primary);
-}
-
-.left-side h3 {
+.our-story-content h3 {
   margin-bottom: 1rem;
 }
 
@@ -28,18 +25,18 @@
 }
 
 .our-story-content > img {
-  width: 360px;
-  border-radius: 10px;
-  height: 360px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: 0.1;
+  z-index: 2;
+  width: 100vw;
+  height: 100%;
   object-fit: cover;
   align-self: center;
 }
 
 @media (max-width: 768px) {
-  .our-story-content {
-    flex-direction: column;
-  }
-
   .our-story-content > img {
     align-self: flex-start;
     width: 100%;
