--- a/src/components/Step2/Step2.module.css
+++ b/src/components/Step2/Step2.module.css
@@ -12,7 +12,11 @@
   display: none;
 }
 
-.step-2 p {
+.step-2 .step-heading {
+  font-size: var(--font-size-7);
+}
+
+.step-2 .step-desc {
   margin-bottom: 0rem;
   margin-top: 4px;
 }
@@ -26,11 +30,11 @@
 .step-action button {
   border: none;
   outline: none;
-  color: var(--white-primary);
-  font-weight: 600;
-  font-size: 16px;
+  color: var(--white-color);
+  font-weight: var(--font-weight-600);
+  font-size: var(--font-size-8);
   max-width: 90vw;
-  background-color: var(--purple-primary);
+  background-color: var(--dark-purple-color);
   border-radius: 10px;
   width: 300px;
   height: 3rem;
@@ -45,17 +49,17 @@
 }
 
 .step-action button:hover {
-  background-color: var(--purple-secondary);
-  color: var(--white-primary);
+  background-color: var(--light-purple-color);
+  color: var(--white-color);
 }
 
 .step-action button:disabled {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(var(--white-rgb), 0.5);
 }
 
 .step-action button:disabled:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-  color: #000;
+  background-color: rgba(var(--white-rgb), 0.5);
+  color: var(--black-color);
 }
 
 .form-holder {
@@ -84,8 +88,8 @@
 }
 
 .radio-group label {
-  font-weight: 500;
-  font-size: 0.875rem;
+  font-weight: var(--font-weight-500);
+  font-size: var(--font-size-9);
 }
 
 .card-images {
@@ -118,13 +122,13 @@
     z-index: 3;
     box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.05);
     justify-content: center;
-    background-color: var(--white-primary);
+    background-color: var(--white-color);
     padding-top: 1rem;
   }
 
   .step-action button {
-    background-color: var(--purple-primary);
-    color: var(--white-primary);
+    background-color: var(--dark-purple-color);
+    color: var(--white-color);
   }
 
   .two-form-controls {
