--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -2,7 +2,7 @@
   margin-top: 100px;
 }
 
-.testimonials-section h2 {
+.testimonials-section h3 {
   text-align: center;
 }
 
@@ -22,7 +22,7 @@
   width: 680px;
   max-width: 90vw;
   text-align: center;
-  background-color: var(--white-primary);
+  background-color: var(--white-color);
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
@@ -40,8 +40,8 @@
 }
 
 .testimonial-inner span {
-  color: #4c494e;
-  font-size: 0.875rem;
+  color: var(--gray-color);
+  font-size: var(--font-size-9);
   margin-bottom: 16px;
   margin-top: 4px;
 }
