--- a/src/form-item.css
+++ b/src/form-item.css
@@ -31,9 +31,9 @@
 }
 
 .form-group .label-holder label {
-  font-weight: 600;
-  font-size: 1rem;
-  color: #4c494e;
+  font-weight: var(--font-weight-600);
+  font-size: var(--font-size-8);
+  color: var(--gray-color);
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
@@ -48,8 +48,8 @@
   border-radius: 5px;
   padding: 0 16px;
   width: 100%;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: var(--font-size-8);
+  font-weight: var(--font-weight-600);
   transition: 250ms ease-out;
 }
 
@@ -82,7 +82,7 @@
 .form-group textarea:focus + .label-holder label,
 .form-group input:not(:placeholder-shown) + .label-holder label,
 .form-group textarea:not(:placeholder-shown) + .label-holder label {
-  font-size: 12px;
+  font-size: var(--font-size-10);
 }
 
 .form-group input:focus + .label-holder img,
@@ -104,36 +104,36 @@ input[type="number"] {
 }
 
 .submit-button {
-  background-color: var(--purple-primary);
-  color: var(--white-primary);
+  background-color: var(--dark-purple-color);
+  color: var(--white-color);
   border: none;
   outline: none;
   cursor: pointer;
   border-radius: 5px;
   min-width: 136px;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: var(--font-size-8);
+  font-weight: var(--font-weight-600);
   max-width: 100%;
   height: 60px;
   transition: 250ms ease-out;
 }
 
 .submit-button:hover {
-  background-color: var(--purple-secondary);
+  background-color: var(--light-purple-color);
 }
 
 @media (max-width: 768px) {
   .form-group .label-holder label {
-    font-size: 1rem;
+    font-size: var(--font-size-8);
   }
 
   .form-group input,
   .form-group .label-holder label {
-    font-size: 0.875rem;
+    font-size: var(--font-size-9);
   }
 
   .form-group input:focus + .label-holder label,
   .form-group input:not(:placeholder-shown) + .label-holder label {
-    font-size: 0.65rem;
+    font-size: var(--font-size-10);
   }
 }
