--- a/src/components/ThroughYears/AchievementItem/AchievementItem.module.css
+++ b/src/components/ThroughYears/AchievementItem/AchievementItem.module.css
@@ -42,7 +42,10 @@
 .item-content {
   color: var(--white-color);
   padding: 0 1rem;
-  background-color: var(--light-purple-color);
+  background-color: var(--dark-purple-color);
+  /* border-left: 1px solid var(--light-color);
+  border-right: 1px solid var(--light-color); */
+  box-shadow: 0px 5px 15px rgba(var(--white-rgb), 0.05);
   display: flex;
   flex-direction: column;
   gap: 12px;
