--- a/src/components/ReservationDoneModal/ReservationDoneModal.module.css
+++ b/src/components/ReservationDoneModal/ReservationDoneModal.module.css
@@ -90,6 +90,23 @@
 
 .reservation-response div p span {
   font-weight: var(--font-weight-600);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: fit-content;
+  margin: 0 auto;
+  padding: 4px;
+  border-radius: 4px;
+  gap: 4px;
+  background-color: rgba(var(--black-rgb), 0.1);
+  cursor: pointer;
+}
+
+.reservation-response div p span img {
+  width: 16px;
+  height: 16px;
 }
 
 .modal-button {
