--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,10 @@
   --pink-color: #9a7a96;
   --white-color: #fcf8ff;
   --light-color: #f1f1e6;
+  --lighter-color: #e6e3f1;
   --gray-color: #4c494e;
+  --border-color: #dcdcdc;
   --black-color: #000;
-  --blue-color: #002b90;
   --dark-purple-rgb: 17, 6, 25;
   --white-rgb: 252, 248, 255;
   --black-rgb: 0, 0, 0;
