--- a/src/form-item.css
+++ b/src/form-item.css
@@ -1,11 +1,11 @@
 .form-group {
   position: relative;
-  background-color: rgb(230, 227, 241);
+  background-color: var(--lighter-color);
   border-radius: 5px;
   width: 100%;
   display: flex;
   align-items: center;
-  border: 1px solid #dcdcdc;
+  border: 1px solid var(--border-color);
   height: 60px;
 }
 
